video notes
